test/good/string.lat
int main() {
    printString("asdf");
    printString(qwer());
    string zxcv = "zxcv";
    printArg(zxcv);
    return 0;
}

string qwer() {
    return "qwer";
}

void printArg(string str) {
    printString(str);
}
