test/bad/decr.lat
int main() {
    string s = "asdf";
    s--;
}
